// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highest priority goes first 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="0-0"
    data-level="0"
  >
    <div
      to="/toto"
    >
      Toto
    </div>
  </li>
  <li
    data-index="1"
    data-key="1-0"
    data-level="0"
  >
    <div
      to="/bar"
    >
      Bar
    </div>
  </li>
  <li
    data-index="2"
    data-key="2-0"
    data-level="0"
  >
    <div
      to="/foo"
    >
      Foo
    </div>
  </li>
  <li
    data-index="3"
    data-key="3-0"
    data-level="0"
  >
    <div
      to="/tutu"
    >
      Tutu
    </div>
  </li>
</ul>
`;

exports[`link item additionalProps are rendered 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="0-0"
    data-level="0"
    style={
      {
        "color": "red",
      }
    }
  >
    <div
      to="/foo"
    >
      Foo
    </div>
  </li>
  <li
    data-index="1"
    data-key="1-0"
    data-level="0"
  >
    <div
      to="/bar"
    >
      Bar
    </div>
  </li>
</ul>
`;

exports[`link item custom keys are rendered 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="foo"
    data-level="0"
    style={
      {
        "color": "red",
      }
    }
  >
    <div
      to="/foo"
    >
      Foo
    </div>
  </li>
  <li
    data-index="1"
    data-key="bar"
    data-level="0"
  >
    <div
      to="/bar"
    >
      Bar
    </div>
  </li>
</ul>
`;

exports[`negative priority goes last 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="0-0"
    data-level="0"
  >
    <div
      to="/foo"
    >
      Foo
    </div>
  </li>
  <li
    data-index="1"
    data-key="1-0"
    data-level="0"
  >
    <div
      to="/bar"
    >
      Bar
    </div>
  </li>
  <li
    data-index="2"
    data-key="2-0"
    data-level="0"
  >
    <div
      to="/tutu"
    >
      Tutu
    </div>
  </li>
  <li
    data-index="3"
    data-key="3-0"
    data-level="0"
  >
    <div
      to="/toto"
    >
      Toto
    </div>
  </li>
</ul>
`;

exports[`nested item custom keys are rendered 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="0-0"
    data-level="0"
    style={
      {
        "color": "red",
      }
    }
  >
    Foo
    <ul
      data-index="0"
      data-key="0-1"
      data-level="1"
    >
      <li
        data-index="0"
        data-key="bar"
        data-level="1"
      >
        <div
          to="/bar"
        >
          Bar
        </div>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`section item additionalProps are rendered 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="0-0"
    data-level="0"
    style={
      {
        "color": "red",
      }
    }
  >
    Foo
    <ul
      data-index="0"
      data-key="0-1"
      data-level="1"
    >
      <li
        data-index="0"
        data-key="0-1"
        data-level="1"
      >
        <div
          to="/bar"
        >
          Bar
        </div>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`section item custom keys are rendered 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="foo"
    data-level="0"
    style={
      {
        "color": "red",
      }
    }
  >
    Foo
    <ul
      data-index="0"
      data-key="foo"
      data-level="1"
    >
      <li
        data-index="0"
        data-key="0-1"
        data-level="1"
      >
        <div
          to="/bar"
        >
          Bar
        </div>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`support 2 section levels 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="0-0"
    data-level="0"
  >
    <div
      to="/foo"
    >
      Foo
    </div>
  </li>
  <li
    data-index="1"
    data-key="1-0"
    data-level="0"
  >
    Bar
    <ul
      data-index="0"
      data-key="0-1"
      data-level="1"
    >
      <li
        data-index="0"
        data-key="0-1"
        data-level="1"
      >
        <div
          to="/toto"
        >
          Toto
        </div>
      </li>
      <li
        data-index="1"
        data-key="1-1"
        data-level="1"
      >
        <div
          to="/tutu"
        >
          Tutu
        </div>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`support 3 section levels 1`] = `
<ul
  data-index="0"
  data-key="root"
  data-level="0"
>
  <li
    data-index="0"
    data-key="0-0"
    data-level="0"
  >
    <div
      to="/foo"
    >
      Foo
    </div>
  </li>
  <li
    data-index="1"
    data-key="1-0"
    data-level="0"
  >
    Bar
    <ul
      data-index="0"
      data-key="0-1"
      data-level="1"
    >
      <li
        data-index="0"
        data-key="0-1"
        data-level="1"
      >
        <div
          to="/toto"
        >
          Toto
        </div>
      </li>
      <li
        data-index="1"
        data-key="1-1"
        data-level="1"
      >
        Tutu
        <ul
          data-index="0"
          data-key="0-2"
          data-level="2"
        >
          <li
            data-index="0"
            data-key="0-2"
            data-level="2"
          >
            <div
              to="/titi"
            >
              Titi
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;
